# pigami

./: CMakeLists.txt  README.md
resources/: pigami
resources/level/: Bifrancique  Interimprimation  Parabijique  Transgargarage  Transsouruble  antigargaratre  level1  level10  level11  level12  level2  level3  level4  level5  level6  level7  level8  level9  level_generated_list  level_generated_list~  level_intro  level_intro_2  level_list  levelfinish
snap/: snapcraft.yaml
snap/gui/: pigami.desktop
src/: Framebuffer.cpp  Framebuffer.hpp  Generator.cpp  Generator.hpp  Resources.cpp  Resources.hpp  constructor.cpp  google-analytics.html  index.html  main.cpp  makefile  plateau.cpp  plateau.h  save.cpp  save.hpp
src/activity/: Activity.hpp  Backbutton.cpp  Backbutton.hpp  GenerateScreen.cpp  GenerateScreen.hpp  GeneratorScreen.cpp  GeneratorScreen.hpp  IntroScreen.cpp  IntroScreen.hpp  LevelScreen.cpp  LevelScreen.hpp  LevelSelector.cpp  LevelSelector.hpp  ResourceLoadingScreen.cpp  ResourceLoadingScreen.hpp
